--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Inter', sans-serif;
+    max-width: 550px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+    background-color: #F55A5A;
+    margin-top: -8px;
+    margin-left: -8px;
+    max-width: 550px;
+    max-height: 55px;
+}
+
+.navbar > img {
+    width: 20px;
+    height: 20px;
+}
+
+.blog--frame {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-left: 12px;
+    margin-top: 25px;
+    padding: 20px;
+}
+
+.blog--image {
+    width: 125px;
+    height: 168px;
+    border-radius: 5px;
+}
+
+.location--frame {
+    display: flex;
+    align-items: center;
+    font-weight: normal;
+    font-size: 10.24px;
+    gap: 2px;
+}
+
+.location--icon {
+    width: 7px;
+    height: 9.55px;
+}
+
+.location--map {
+    color: #918E9B;
+    padding-left: 8px;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: -8px;
+}
+
+.startDate--endDate {
+    font-weight: bold;
+    font-size: 10.24px;
+}
+
+.description {
+    font-weight: normal;
+    font-size: 10.24px;
+    max-width: 326px;
+}
+
+.seperator {
+    height: 0.00000000001px;
+    margin-left: 50px;
+    width: 450px;
+    box-shadow: 0px 0px 5px 0.3px #918E9B;
 }
